create event manager and move necessary functions